--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -24,20 +24,22 @@
           <th>Aktien Gesamt</th>
           <th>Aktien Jahr</th>
           <th>Einzahlung Gesamt (€)</th>
+          <th>Einzahlung aktuelles Jahr inkl. reinvestierte Dividenden (€)</th>
           <th>Einzahlung aktuelles Jahr (€)</th>
           <th>Dividenden aktuelles Jahr (€)</th>
           <th>Dividenden Gesamt (€)</th>
           <th>Dividendenrendite (%)</th>
         </tr>
-        <tr *ngFor="let elem of simulationPerYear; let y = index">
+        <tr *ngFor="let elem of result; let y = index">
           <td>{{ currentYear + y }}</td>
-          <td>{{ elem.amount | number:'1.2-2':'de-DE' }}</td>
-          <td>{{ kpisPerYear[y].stockAmount | number:'1.2-2':'de-DE' }}</td>
-          <td>{{ kpisPerYear[y].accumulatedPayments | number:'1.2-2':'de-DE' }}</td>
-          <td>{{ elem.payment | number:'1.2-2':'de-DE' }}</td>
-          <td>{{ kpisPerYear[y].dividendPayout | number:'1.2-2':'de-DE' }}</td>
-          <td>{{ kpisPerYear[y].accumulatedDividendPayout | number:'1.2-2':'de-DE' }}</td>
-          <td>{{ kpisPerYear[y].dividendPercentage | number:'1.2-2':'de-DE' }}</td>
+          <td>{{ elem.shares.stockAmount | number:'1.2-2':'de-DE' }}</td>
+          <td>{{ elem.kpis.stockAmount | number:'1.2-2':'de-DE' }}</td>
+          <td>{{ elem.kpis.accumulatedPayments | number:'1.2-2':'de-DE' }}</td>
+          <td></td>
+          <td>{{ elem.shares.payment | number:'1.2-2':'de-DE' }}</td>
+          <td>{{ elem.kpis.dividendPayout | number:'1.2-2':'de-DE' }}</td>
+          <td>{{ elem.kpis.accumulatedDividendPayout | number:'1.2-2':'de-DE' }}</td>
+          <td>{{ elem.kpis.dividendPercentage | number:'1.2-2':'de-DE' }}</td>
         </tr>
       </table>
     </div>
@@ -80,7 +82,7 @@
 
         <mat-form-field>
           <mat-label>Jährliche Steigerung (€)</mat-label>
-          <input matInput type="number" formControlName="yearlyIncrease">
+          <input matInput type="number" formControlName="yearlyInvestmentIncrease">
         </mat-form-field>
       </div>
 
@@ -92,12 +94,12 @@
 
         <mat-form-field>
           <mat-label>Initiale jährliche Dividendenrendite (%)</mat-label>
-          <input matInput type="number" formControlName="dividendPercentage">
+          <input matInput type="number" formControlName="initialDividendPercentage">
         </mat-form-field>
 
         <mat-form-field>
           <mat-label>Jährliche Steigerung der Dividende (%)</mat-label>
-          <input matInput type="number" formControlName="dividendPercentageIncrease">
+          <input matInput type="number" formControlName="yearlyDividendPercentageIncrease">
         </mat-form-field>
       </div>
 
@@ -110,7 +112,5 @@
 
     </div>
   </form>
-
-
 </div>
 
