--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -101,6 +101,16 @@
   cursor: pointer;
 }
 
+.copyright {
+  display: flex;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  background: #222222;
+  color: white;
+  font-weight: bold;
+  justify-content: space-evenly;
+}
+
 mat-icon {
   margin-right: 8px;
 }
