--- a/src/app/calculator/calculator.component.css
+++ b/src/app/calculator/calculator.component.css
@@ -41,7 +41,15 @@
   padding-top: 16px;
   padding-bottom: 16px;
   margin-bottom: 16px;
+  margin-top: 16px;
   width: 100%;
+}
+
+.summaryCell {
+  max-width: 50%;
+  background: white;
+  border-color: #4DB9F8;
+  border-bottom: 1px solid;
 }
 
 mat-form-field {
