Design and Calculation
The header was made sticky and some design enhancements. Calculation changed to use real dividend payout instead of utilizing dividend percentage. This was a good step forward to better results.

--- a/src/app/calculator/calculator.component.css
+++ b/src/app/calculator/calculator.component.css
@@ -78,3 +78,17 @@ tr:nth-child(even) {
 }
 
 
+.summary {
+  display: flex;
+  width: 100%;
+}
+
+.chart {
+  width: 65%;
+  padding-left: 16px;
+}
+
+.summaryResult {
+  width: 35%;
+}
+
