--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,8 +7,17 @@
   transform: scale(1.1);
 }
 
+.headerContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
 .header {
   display: flex;
+  flex-flow: row wrap;
   background: black;
   padding-left: 64px;
   padding-right: 64px;
@@ -54,6 +63,7 @@
   padding-right: 64px;
   padding-top: 24px;
   padding-bottom: 24px;
+  margin-top: 120px;
 }
 
 .footer {
