--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,31 @@
 <div class="container">
 
-  <div class="header">
-    <div>
-      <img src="images/logo.png" width="100px" height="100px"/>
-    </div>
-
-    <div class="title">
-      <span class="mainTitle">DividendenTraum</span><br>
-      <span class="subTitle">Der AktienTraum Dividendenrechner</span>
-    </div>
-
-    <div class="mainMenu">
-      <div class="mainMenuItem" (click)="showCalculator()">
-        <mat-icon class="icon" fontSet="material-symbols-rounded">function</mat-icon>
-        Dividendenrechner
+  <div class="headerContainer">
+    <div class="header">
+      <div>
+        <img src="images/logo.png" width="100px" height="100px"/>
       </div>
-      <div class="mainMenuItem" (click)="showCommunity()">
-        <mat-icon class="icon" fontSet="material-symbols-rounded">groups</mat-icon>
-        Community
+
+      <div class="title">
+        <span class="mainTitle">DividendenTraum</span><br>
+        <span class="subTitle">Der AktienTraum Dividendenrechner</span>
+      </div>
+
+      <div class="mainMenu">
+        <div class="mainMenuItem" (click)="showCalculator()">
+          <mat-icon class="icon" fontSet="material-symbols-rounded">function</mat-icon>
+          Dividendenrechner
+        </div>
+        <div class="mainMenuItem" (click)="showCommunity()">
+          <mat-icon class="icon" fontSet="material-symbols-rounded">groups</mat-icon>
+          Community
+        </div>
+        <div class="mainMenuItem" (click)="showNews()">
+          <mat-icon class="icon" fontSet="material-symbols-rounded">brand_awareness</mat-icon>
+          Neuigkeiten
+        </div>
       </div>
     </div>
-
   </div>
 
   @if (calculatorPage()) {
@@ -32,6 +37,12 @@
   @if (communityPage()) {
     <div class="content">
       <app-community></app-community>
+    </div>
+  }
+
+  @if (newsPage()) {
+    <div class="content">
+      <app-news [showFull]="true"></app-news>
     </div>
   }
 
@@ -73,7 +84,7 @@
   </div>
 
   <div class="copyright">
-    Copyright © 2024 AktienTraum
+    Copyright © 2024 AktienTraum - Release 1.0.0 (27.09.2024)
   </div>
 
 </div>
