--- a/src/app/calculator/calculator.component.css
+++ b/src/app/calculator/calculator.component.css
@@ -77,6 +77,9 @@ tr:nth-child(even) {
   background-color: #EEEEEE;
 }
 
+.priceGains {
+  background-color: aquamarine;
+}
 
 .summary {
   display: flex;
