--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -47,11 +47,8 @@
                 Simulierter Aktienkurs
               </th>
               <th *ngIf="showStockColumns">Durchschn. Kaufkurs</th>
-              <th *ngIf="showStockColumns">Dividende pro Aktie</th>
-              <th *ngIf="showStockColumns">Dividenden-Rendite (%)</th>
-              <th *ngIf="showStockColumns">Aktien Gesamt</th>
-              <th *ngIf="showStockColumns">Aktien Jahr</th>
-              <th *ngIf="showStockColumns">Aktienkäufe aus Dividenden (Jahresende)</th>
+              <th *ngIf="showStockColumns">Dividende pro Aktie / Dividenden-Rendite</th>
+              <th *ngIf="showStockColumns">Aktien Gesamt / Jahr</th>
               <th>Einzahlung Summe (inkl. reinvestierte Dividenden) (€)</th>
               <th>Einzahlung Summe (ohne reinvestierte Dividenden) (€)</th>
               <th>Einzahlung aktuelles Jahr (€)</th>
@@ -59,16 +56,21 @@
               <th>Reinvestierte Dividenden aktuelles Jahr (€)</th>
               <th>Veränderung Dividende (€)</th>
               <th>Jährliche reinvestierte Dividende / Jährlicher Investitionsbeitrag (Faktor)</th>
+              <th class="priceGains">Kursgewinne</th>
+              <th class="priceGains">Summe Vermögen (inkl. Kurgewinne)</th>
             </tr>
             <tr *ngFor="let elem of result; let y = index">
               <td>{{ currentYear + y }}</td>
               <td *ngIf="showStockColumns">{{ elem.shares.purchasePrice | number:'1.2-2':'de-DE' }}</td>
               <td *ngIf="showStockColumns">{{ elem.shares.averagePurchasePrice | number:'1.2-2':'de-DE' }}</td>
-              <td *ngIf="showStockColumns">{{ elem.dividend.currentDividendPerShare | number:'1.2-2':'de-DE' }}</td>
-              <td *ngIf="showStockColumns">{{ elem.kpis.dividendPercentage | number:'1.2-2':'de-DE' }}</td>
-              <td *ngIf="showStockColumns">{{ elem.kpis.accumulatedStockAmount | number:'1.2-2':'de-DE' }}</td>
-              <td *ngIf="showStockColumns">{{ elem.shares.stockAmount | number:'1.2-2':'de-DE' }}</td>
-              <td *ngIf="showStockColumns">{{ elem.shares.stocksBoughtFromDividends | number:'1.2-2':'de-DE' }}</td>
+              <td *ngIf="showStockColumns">
+                {{ elem.dividend.currentDividendPerShare | number:'1.2-2':'de-DE' }}€ /
+                {{ elem.kpis.dividendPercentage | number:'1.2-2':'de-DE' }}%
+              </td>
+              <td *ngIf="showStockColumns">
+                {{ elem.kpis.accumulatedStockAmount | number:'1.2-2':'de-DE' }} /
+                {{ elem.shares.stockAmount | number:'1.2-2':'de-DE' }}
+              </td>
               <td>{{ elem.kpis.accumulatedPaymentsIncludingDividends | number:'1.2-2':'de-DE' }}</td>
               <td>{{ elem.kpis.accumulatedPayments | number:'1.2-2':'de-DE' }}</td>
               <td>{{ elem.shares.payment | number:'1.2-2':'de-DE' }}</td>
@@ -76,6 +78,8 @@
               <td>{{ elem.kpis.dividendPayoutReinvested | number:'1.2-2':'de-DE' }}</td>
               <td>{{ elem.kpis.yearlyAbsoluteDividendGrowth | number:'1.2-2':'de-DE' }}</td>
               <td>{{ elem.kpis.yearlyInvestmentToReinvestedDividendFactor | number:'1.2-2':'de-DE' }}</td>
+              <td>{{ elem.kpis.accumulatedPriceGains | number:'1.2-2':'de-DE' }}</td>
+              <td>{{ elem.kpis.accumulatedAssetsInclundingPriceGains | number:'1.2-2':'de-DE' }}</td>
             </tr>
           </table>
         </div>
