--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -257,7 +257,7 @@
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Jährlicher Steuerfreibetrag (€)</mat-label>
+              <mat-label>Jährlicher verfügbarer Steuerfreibetrag (€)</mat-label>
               <input min="0" matInput type="number" formControlName="yearlyTaxFreeSum">
             </mat-form-field>
           </div>
