--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,5 +44,16 @@ html {
   margin-right: 16px;
 }
 
+.disclaimer {
+  border-left: 2px solid #000;
+  padding-left: 8px;
+  background: #DFDFFE;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+  margin-top: 16px;
+  width: 100%;
+}
+
 @include mat.core();
 @include mat.color-variants-backwards-compatibility($theme);
